feat: get all organizations
